# VORTEX

./: .gitignore  CMakeLists.txt  bench_standalone.c  debug_interp.c  roadmap.md  test_debug.c  test_full.c  test_interp_main.c  test_minimal.c  worklog.md
agent-ctx/: 1-a-bug-fix-agent.md  1-c-bug-fix-agent.md  1-d-bug-fix-agent.md  3-b-performance-fix-agent.md
benchmarks/: CMakeLists.txt  bench_framework.c  bench_framework.h  bench_real_workload.c  bench_t2.c  test_deopt.c
benchmarks/c_comparison/: bench_c_comparison  bench_c_comparison.c
benchmarks/jit_exec/: jit_exec_bench.c
benchmarks/macro/: bench_fib.c
benchmarks/micro/: bench_arith.c  bench_call.c
scripts/: benchmark.c  check_blocks  check_blocks.c  check_blocks2  check_blocks2.c  check_cond  check_cond.c  crash_diag  crash_diag.c  deep_dive.c  disasm.py  dump_is_zero.c  dump_jcc  dump_jcc.c  dump_native.c  test_collatz  test_collatz.c  test_collatz2  test_collatz2.c  test_collatz3  test_collatz3.c  test_const.c  test_div.c  test_divmod  test_divmod.c  test_gcd  test_gcd.c  test_if_branch.c  test_nsq  test_nsq.c  test_popcount  test_popcount.c  test_ret_arg.c  trace_all_pos  trace_all_pos.c  trace_coalesce  trace_coalesce.c  trace_collatz  trace_collatz.c  trace_divmod  (+21 more)
src/: CMakeLists.txt  main.c  main_new.c  main_v2.c  runtime_stubs.c  vortex_config.h.in
src/baseline/: codegen.c  codegen.h  deopt_stubs.c  deopt_stubs.h  frame_layout.c  frame_layout.h  guards.c  guards.h  instrument.c  instrument.h
src/codecache/: cache.c  cache.h  evict.c  evict.h  install.c  install.h  invalidate.c  invalidate.h  types.h  versioned.c  versioned.h
src/compile/: callee_lookup.c  callee_lookup.h  orchestrator.c  orchestrator.h  phase_react.c  phase_react.h  pipeline.c  pipeline.h  priority.c  priority.h  request.c  request.h  safepoint.c  safepoint.h  spec_versioning.c  spec_versioning.h  threadpool.c  threadpool.h  version.c  version.h
src/deopt/: coordinator.c  coordinator.h  deoptless.c  deoptless.h  frame_state.c  frame_state.h  osr.c  osr.h  rate_limit.c  rate_limit.h  side_table.c  side_table.h  stack_walk.c  stack_walk.h  types.h
src/guard/: ewma.c  ewma.h  guard_deps.c  guard_deps.h  guard_page_type.c  guard_page_type.h  heap_value_prop.c  heap_value_prop.h  hoist.c  hoist.h  merge.c  merge.h  metadata.c  metadata.h  value_profile.c  value_profile.h
src/inliner/: features.c  features.h  feedback.c  feedback.h  inference.c  inference.h  transform.c  transform.h
src/interp/: dispatch.c  dispatch.h  frame.c  frame.h  lookup.c  lookup.h  profiler.c  profiler.h  type_feedback.c  type_feedback.h
src/ir/: bounds_check.c  bounds_check.h  constant_prop.c  constant_prop.h  dce.c  dce.h  graph.c  graph.h  gvn.c  gvn.h  induction.c  induction.h  licm.c  licm.h  loop_unroll.c  loop_unroll.h  node.c  node.h  schedule.c  schedule.h  smi_tag_elision.c  smi_tag_elision.h  spec_elim.c  spec_elim.h  strength_reduce.c  strength_reduce.h  tbaa.c  tbaa.h  verify.c  verify.h
src/lower/: emit.c  emit.h  guard_emit.c  guard_emit.h  isel.c  isel.h  regalloc.c  regalloc.h  reloc.c  reloc.h
src/midtier/: midtier.c  midtier.h
src/pea/: analysis.c  analysis.h  cross_object_sr.c  cross_object_sr.h  materialize.c  materialize.h  speculative_pea.c  speculative_pea.h  virtual.c  virtual.h
src/profile/: data.c  data.h  merge.c  merge.h  persist.c  persist.h  phase.c  phase.h  sha256.c
src/region/: budget.c  budget.h  cross_trace.c  cross_trace.h  stitch.c  stitch.h
src/runtime/: arena.c  arena.h  bytecode.c  bytecode.h  gc.c  gc.h  helpers.c  helpers.h  object.c  object.h  safepoint_manager.c  safepoint_manager.h  type_system.c  type_system.h
src/sota/: alloc_graph.c  alloc_graph.h  fdi.c  fdi.h  loop_spec.c  loop_spec.h  markov.c  markov.h  phase.c  phase.h  recomp.c  recomp.h  train.py
src/trace/: recorder.c  recorder.h  selector.c  selector.h  side_exit.c  side_exit.h  tree.c  tree.h
tests/: CMakeLists.txt  test_framework.c  test_framework.h
tests/fuzz/: fuzz_graph_build.c
tests/integration/: test_interp_basics.c  test_jit_e2e.c  test_tier_equivalence.c
tests/stress/: test_stress_compile_lower.c  test_stress_integration.c  test_stress_ir.c  test_stress_profile_trace.c  test_stress_runtime.c
tests/unit/: test_arena.c  test_assembler_prog.c  test_bugfixes.c  test_bytecode.c  test_deopt_coordinator.c  test_deopt_rate_limit.c  test_graph.c  test_ir_bugfixes.c  test_node.c  test_object.c  test_p2_features.c  test_regalloc_upgrade.c  test_safepoint_manager.c  test_smi_arith.c  test_type_system.c  test_versioned_cache.c  test_zero_cost_deopt.c
tools/: CMakeLists.txt  assembler.c  assembler.h  assembler_main.c  disassembler.c  disassembler.h  disassembler_main.c
upload/: Pasted Content_1781215609010.txt
